--- a/lang/1034.json
+++ b/lang/1034.json
@@ -28,21 +28,21 @@
         "amp_preferences": "&Preferencias",
         "amp_help": "&Ayuda",
         "amp_check_for_update": "&Buscar actualización",
-        "amp_about": "&Sobre",
+        "amp_about": "&Acerca de",
         "maximum": "Máximo",
         "high": "Alto",
         "normal": "Normal",
         "do_not_download": "No descargar",
         "priority": "Prioridad",
         "unknown_name": "Nombre desconocido",
-        "unknown_size": "Mida desconocida",
+        "unknown_size": "Tamaño desconocido",
         "choose_save_path": "Escoge la ruta para guardar",
         "torrent": "Torrent",
         "save_path": "Ruta para guardar",
         "browse": "...",
         "add_torrent_s": "Añade torrent(s)",
         "storage": "Almacenamiento",
-        "about_picotorrent": "Sobre PicoTorrent",
+        "about_picotorrent": "Acerca de PicoTorrent",
         "picotorrent_v_format": "PicoTorrent v%s",
         "build_info_format": "Branca: %s\nSHA1: %s",
         "picotorrent_description": "Contruido con amor, uilizando Boost, Rasterbar-libtorrent y OpenSSL.",
@@ -56,11 +56,11 @@
         "port": "Puerto",
         "proxy": "Servidor intermediario",
         "type": "Tipo",
-        "host": "Amfitrión",
+        "host": "Anfitrión",
         "username": "Nombre de usuario",
         "password": "Contraseña",
         "force_proxy": "Forzar servidor intermediario",
-        "proxy_hostnames": "Nombre de amfitrión del servidor intermediario",
+        "proxy_hostnames": "Nombre de anfitrión del servidor intermediario",
         "proxy_peer_connections": "Conexiones del seridor intermediario para parejas",
         "proxy_tracker_connections": "Conexiones del servidor intermediario para el tracker",
         "connection": "Conexión",
@@ -104,13 +104,13 @@
         "ignore_update": "Ignora esta actualización.",
         "confirm_remove_description": "Esto eliminará cualquier fichero descargado del torrent.",
         "confirm_remove": "Confirmar la eliminación",
-        "do_not_ask_again": "No me vuelvas a preguntar",
+        "do_not_ask_again": "No volver a preguntar",
         "close_picotorrent": "Cierra PicoTorrent",
         "minimize_to_tray": "Minimiza a la safata",
-        "confirm_close_description": "Está seguro/a que quiere cerrar PicoTorrent?",
-        "confirm_close": "Confirmar el cerrar",
+        "confirm_close_description": "¿Está seguro/a que quiere cerrar PicoTorrent?",
+        "confirm_close": "Confirmar el cierre",
         "remember_choice": "Recordar mis elecciones",
-        "select_destination": "Selecciona la destinación",
+        "select_destination": "Seleccionar destino",
         "state_checking_resume_data": "Verificando los datos para reanudar",
         "state_downloading": "Descargando",
         "state_downloading_checking": "Verificando",
@@ -128,7 +128,7 @@
         "state_uploading_queued": "En cola",
         "state_uploading_stalled": "Sembrando",
         "general": "General",
-        "user_interface": "Interficíe de usuario",
+        "user_interface": "Interfaz de usuario",
         "language": "Idioma",
         "prompt_restart": "PicoTorrent necessita reiniciar para aplicar los cambios.",
         "prompt_restart_title": "Reinicio necessario",
@@ -143,7 +143,7 @@
         "miscellaneous": "Diverso",
         "start_with_windows": "Iniciar PicoTorrent con Windows",
         "start_position": "Posición de inicio",
-        "hidden": "Safata",
+        "hidden": "Oculto",
         "minimized": "Minimizado",
         "_torrent_s": "%d torrent(s)",
         "queuing": "En cola",
